--- a/manuscripts/24-lmtp-coop-church/24_no_name_lmtp_coop_church.qmd
+++ b/manuscripts/24-lmtp-coop-church/24_no_name_lmtp_coop_church.qmd
@@ -12,6 +12,7 @@ editor_options:
   chunk_output_type: console
 format:
   pdf:
+    pdf-engine: lualatex
     sanitise: true
     keep-tex: true
     link-citations: true
@@ -871,7 +872,7 @@ Our third causal contrast examines: "What would be the average difference across
 Although the set of causal contrasts analysts might consider is unbounded, those we have selected address these specific scientific and policy interests.
 
 
-Note that our approach does not focus on testing specific hypotheses; instead, we aim to accurately and consistently compute our pre-specified causal contrasts [@hernan2024stating].
+Note that our approach does not focus on testing specific hypotheses; instead, we aim to accurately and consistently compute pre-specified causal contrasts [@hernan2024stating].
 
 
 ## Method
@@ -880,7 +881,7 @@ Note that our approach does not focus on testing specific hypotheses; instead, w
 ### Sample
 
 
-Data were collected as part of the New Zealand Attitudes and Values Study (NZAVS), an annual longitudinal national probability panel assessing New Zealand residents’ social attitudes, personality, ideology, and health outcomes. The panel began in 2009 and has since expanded to include over fifty researchers, with responses from `r n_total` participants to date. The study operates independently of political or corporate funding and is based at a university. Data summaries for all measures used in this study are provided in **Supplemental Appendices B-D**. For more information about the NZAVS, see: [OSF.IO/75SNB](https://doi.org/10.17605/OSF.IO/75SNB). The data for this study were obtained from the NZAVS waves 10-12 cohort, covering 2018-2021. Although this cohort is a national probability sample, we weighted responses by New Zealand 2018 Census estimates (age, gender, ethnicity) to produce results that better reflect the New Zealand population. Information on these survey weights can be found in the NZAVS documentation, see: [OSF.IO/75SNB](https://doi.org/10.17605/OSF.IO/75SNB).
+Data were collected as part of the New Zealand Attitudes and Values Study (NZAVS), an annual longitudinal national probability panel assessing New Zealand residents’ social attitudes, personality, ideology, and health outcomes. The panel began in 2009 and has since expanded to include over fifty researchers, with responses from `r n_total` participants to date. The study operates independently of political or corporate funding and is based at a university. Data summaries for all measures used in this study are provided in **Supplemental Appendices B-D**. For more information about the NZAVS, refer to: [OSF.IO/75SNB](https://doi.org/10.17605/OSF.IO/75SNB). The data for this study were obtained from the NZAVS waves 10-12 cohort, covering 2018-2021. Although this cohort is a national probability sample, we weighted responses by New Zealand 2018 Census estimates (age, gender, ethnicity) to produce results that better reflect the New Zealand population. Information on these survey weights can be found in the NZAVS documentation, refer to: [OSF.IO/75SNB](https://doi.org/10.17605/OSF.IO/75SNB).
 
 
 ### Treatment Indicator
@@ -1172,8 +1173,7 @@ We generated graphs, tables, and output reports using the margot package [@margo
 
 
 
-
-To assess the sensitivity of results to unmeasured confounding, we report VanderWeele and Ding’s “E-value” in all analyses [@vanderweele2017]. The E-value quantifies the minimum strength of association (on the risk ratio scale) that an unmeasured confounder would need to have with both the exposure and the outcome (after considering the measured covariates) to explain away the observed exposure–outcome association [@vanderweele2020; @linden2020EVALUE]. We used the bound of the E-value 95% confidence interval closest to 1 to evaluate the strength of evidence, providing a clear metric for understanding the robustness of our findings in the presence of potential unmeasured confounding.
+To assess the sensitivity of results to unmeasured confounding, we report VanderWeele and Ding’s "E-value" in all analyses [@vanderweele2017]. The E-value quantifies the minimum strength of association (on the risk ratio scale) that an unmeasured confounder would need to have with both the exposure and the outcome (after considering the measured covariates) to explain away the observed exposure–outcome association [@vanderweele2020; @linden2020EVALUE]. We used the bound of the E-value 95% confidence interval closest to 1 to evaluate the strength of evidence, providing a clear metric for understanding the robustness of our findings in the presence of potential unmeasured confounding.
 
 
 ### Scope of Interventions
@@ -1304,7 +1304,7 @@ For *donations*, the effect estimate is 0.121 [0.102, 0.14]. The E-value for thi
 
 
 
-For *hours volunteer*, the effect estimate is 0.095 [0.066, 0.123]. The E-value for this estimate is 1.404, with a lower bound of 1.317. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.317 to negate the observed effect. Weaker confounding would not overturn it. We infer *evidence for causality*.  On the data scale, this intervention represents an increase of *`r volunteer_null` minutes* per adult per week in hours volunteering over the status quo.
+For *hours volunteer*, the effect estimate is 0.095 [0.066, 0.123]. The E-value for this estimate is 1.404, with a lower bound of 1.317. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.317 to negate the observed effect. We infer *evidence for causality*.  On the data scale, this intervention represents an increase of *`r volunteer_null` minutes* per adult per week in hours volunteering over the status quo.
 
 
 
@@ -1334,7 +1334,7 @@ tab_all_prosocial_null_zero |>
 
 
 
-For *donations*, the effect estimate is -0.011 [-0.029, 0.008]. The E-value for this estimate is 1.111, with a lower bound of 1. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1 to negate the observed effect. Weaker confounding would not overturn it. We infer that *the evidence for causality is not reliable*. On the data scale, this intervention represents a difference of NZD `r charity_null_zero` per adult per year in charitable giving compared to the status quo. Still, again, this effect is not reliable.
+For *donations*, the effect estimate is -0.011 [-0.029, 0.008]. The E-value for this estimate is 1.111, with a lower bound of 1. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1 to negate the observed effect. We infer that *the evidence for causality is not reliable*. On the data scale, this intervention represents a difference of NZD `r charity_null_zero` per adult per year in charitable giving compared to the status quo. Still, again, this effect is not reliable.
 
 
 
@@ -1416,10 +1416,10 @@ tab_received_time |>
 For *community gives time*, the effect estimate is 1.378 [1.231, 1.541]. The E-value for this estimate is 2.1, with a lower bound of 1.764. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.764 to negate the observed effect. Weaker confounding would not overturn it. We infer *evidence for causality*.
 
 
-For *friends give time*, the effect estimate is 1.187 [1.108, 1.271]. The E-value for this estimate is 1.658, with a lower bound of 1.454. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.454 to negate the observed effect. Weaker confounding would not overturn it. We infer *evidence for causality*.
+For *friends give time*, the effect estimate is 1.187 [1.108, 1.271]. The E-value for this estimate is 1.658, with a lower bound of 1.454. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.454 to negate the observed effect. We infer *evidence for causality*.
 
 
-For *family gives time*, the effect estimate is 0.95 [0.901, 1.003]. The E-value for this estimate is 1.288, with a lower bound of 1. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1 to negate the observed effect. Weaker confounding would not overturn it. We infer *that evidence for causality is not reliable*.
+For *family gives time*, the effect estimate is 0.95 [0.901, 1.003]. The E-value for this estimate is 1.288, with a lower bound of 1.  We infer *that evidence for causality is not reliable*.
 
 
 #### Regular Religious Service vs. Status Quo Treatment Contrast for Time Received From Others
@@ -1456,10 +1456,10 @@ tab_received_time_null |>
 For *community gives time*, the effect estimate is 1.289 [1.174, 1.415]. The E-value for this estimate is 1.899, with a lower bound of 1.626. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.626 to negate the observed effect. Weaker confounding would not overturn it. We infer *evidence for causality*.
 
 
-For *friends give time*, the effect estimate is 1.128 [1.061, 1.199]. The E-value for this estimate is 1.508, with a lower bound of 1.315. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.315 to negate the observed effect. Weaker confounding would not overturn it. We infer *evidence for causality*.
+For *friends give time*, the effect estimate is 1.128 [1.061, 1.199]. The E-value for this estimate is 1.508, with a lower bound of 1.315. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.315 to negate the observed effect. We infer *evidence for causality*.
 
 
-For *family gives time*, the effect estimate is 0.958 [0.913, 1.006]. The E-value for this estimate is 1.258, with a lower bound of 1. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1 to negate the observed effect. Weaker confounding would not overturn it. We infer **that evidence for causality is not reliable**.
+For *family gives time*, the effect estimate is 0.958 [0.913, 1.006]. The E-value for this estimate is 1.258, with a lower bound of 1. We infer **that evidence for causality is not reliable**.
 
 
 
@@ -1467,7 +1467,7 @@ For *family gives time*, the effect estimate is 0.958 [0.913, 1.006]. The E-valu
 #### Zero Religious Service vs. Status Quo Treatment Contrast for Time Received From Others
 
 
-@fig-study2 *C* and @tbl-2_3 present results for the treatment contrasts between Zero Religious Service and Status Quo, focusing on voluntary help received from others during the past week (yes/no). These results are measured on the risk ratio scale.
+@fig-study2 *C* and @tbl-2_3 present results for the treatment contrasts between Zero Religious Service and Status Quo, focusing on voluntary help received from others during the past week (yes/no). These causal effect estimates are presented on the risk ratio scale.
 
 
 
@@ -1491,13 +1491,13 @@ tab_received_time_null_zero |>
 ```
 
 
-For *family gives time*, the effect estimate is 1.008 [0.991, 1.026]. The E-value for this estimate is 1.098, with a lower bound of 1. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1 to negate the observed effect. Weaker confounding would not overturn it. We infer *that evidence for causality is not reliable*.
+For *family gives time*, the effect estimate is 1.008 [0.991, 1.026]. The E-value for this estimate is 1.098, with a lower bound of 1. We infer *that evidence for causality is not reliable*.
 
 
-For *friends give time*, the effect estimate is 0.95 [0.928, 0.973]. The E-value for this estimate is 1.288, with a lower bound of 1.197. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.197 to negate the observed effect. Weaker confounding would not overturn it. We infer *evidence for causality*.
+For *friends give time*, the effect estimate is 0.95 [0.928, 0.973]. The E-value for this estimate is 1.288, with a lower bound of 1.197. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.197 to negate the observed effect. We infer *evidence for causality*.
 
 
-For *community gives time*, the effect estimate is 0.936 [0.889, 0.985]. The E-value for this estimate is 1.339, with a lower bound of 1.14. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.14 to negate the observed effect. Weaker confounding would not overturn it. We infer *evidence for causality*.
+For *community gives time*, the effect estimate is 0.936 [0.889, 0.985]. The E-value for this estimate is 1.339, with a lower bound of 1.14. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.14 to negate the observed effect. We infer *evidence for causality*.
 
 
 ```{r}
@@ -1553,13 +1553,13 @@ tab_all_received_money |>
 
 
 
-For *community gives money*, the effect estimate is 1.376 [1.112, 1.703]. The E-value for this estimate is 2.095, with a lower bound of 1.465. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.465 to negate the observed effect. Weaker confounding would not overturn it. We infer *evidence for causality*.
+For *community gives money*, the effect estimate is 1.376 [1.112, 1.703]. The E-value for this estimate is 2.095, with a lower bound of 1.465. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.465 to negate the observed effect. We infer *evidence for causality*.
 
 
-For *family gives money*, the effect estimate is 1.137 [1.028, 1.258]. The E-value for this estimate is 1.532, with a lower bound of 1.198. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.198 to negate the observed effect. Weaker confounding would not overturn it. We infer *evidence for causality*.
+For *family gives money*, the effect estimate is 1.137 [1.028, 1.258]. The E-value for this estimate is 1.532, with a lower bound of 1.198. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.198 to negate the observed effect. We infer *evidence for causality*.
 
 
-For *friends gives money*, the effect estimate is 1.137 [0.964, 1.342]. The E-value for this estimate is 1.532, with a lower bound of 1. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1 to negate the observed effect. Weaker confounding would not overturn it. We infer *that evidence for causality is not reliable*.
+For *friends gives money*, the effect estimate is 1.137 [0.964, 1.342]. The E-value for this estimate is 1.532, with a lower bound of 1. We infer *that evidence for causality is not reliable*.
 
 
 
@@ -1598,10 +1598,10 @@ tab_all_received_money_null|>
 For *community gives money*, the effect estimate is 1.254 [1.098, 1.432]. The E-value for this estimate is 1.818, with a lower bound of 1.426. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.426 to negate the observed effect. Weaker confounding would not overturn it. We infer *evidence for causality*.
 
 
-For *family gives money*, the effect estimate is 1.13 [1.037, 1.232]. The E-value for this estimate is 1.513, with a lower bound of 1.233. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.233 to negate the observed effect. Weaker confounding would not overturn it. We infer *evidence for causality*.
+For *family gives money*, the effect estimate is 1.13 [1.037, 1.232]. The E-value for this estimate is 1.513, with a lower bound of 1.233. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1.233 to negate the observed effect. We infer *evidence for causality*.
 
 
-For *friends gives money*, the effect estimate is 1.041 [0.951, 1.139]. The E-value for this estimate is 1.248, with a lower bound of 1. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1 to negate the observed effect. Weaker confounding would not overturn it. We infer *that evidence for causality is not reliable*.
+For *friends gives money*, the effect estimate is 1.041 [0.951, 1.139]. The E-value for this estimate is 1.248, with a lower bound of 1. We infer *that evidence for causality is not reliable*.
 
 
 #### Zero vs. Status Quo Causal Contrast on Money Received From Others
@@ -1635,13 +1635,13 @@ tab_all_received_money_null_zero|>
 
 
 
-For *family gives money*, the effect estimate on the risk ratio scale is 0.993 [0.953, 1.035]. The E-value for this estimate is 1.091, with a lower bound of 1. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1 to negate the observed effect. Weaker confounding would not overturn it. We infer *that evidence for causality is not reliable*.
+For *family gives money*, the effect estimate on the risk ratio scale is 0.993 [0.953, 1.035]. The E-value for this estimate is 1.091, with a lower bound of 1. We infer *that evidence for causality is not reliable*.
 
 
-For *friends gives money*, the effect estimate on the risk ratio scale is 0.915 [0.809, 1.036]. The E-value for this estimate is 1.412, with a lower bound of 1. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1 to negate the observed effect. Weaker confounding would not overturn it. We infer *that evidence for causality is not reliable*.
+For *friends gives money*, the effect estimate on the risk ratio scale is 0.915 [0.809, 1.036]. The E-value for this estimate is 1.412, with a lower bound of 1. We infer *that evidence for causality is not reliable*.
 
 
-For *community gives money*, the effect estimate on the risk ratio scale is 0.911 [0.796, 1.042]. The E-value for this estimate is 1.425, with a lower bound of 1. At this lower bound, unmeasured confounders would need a minimum association strength with both the intervention sequence and outcome of 1 to negate the observed effect. Weaker confounding would not overturn it. We infer *that evidence for causality is not reliable*.
+For *community gives money*, the effect estimate on the risk ratio scale is 0.911 [0.796, 1.042]. The E-value for this estimate is 1.425, with a lower bound of 1. We infer *that evidence for causality is not reliable*.
 
 
 ```{r}
@@ -1678,31 +1678,26 @@ study_3
 ```
 
 
-To better evaluate the contributions of our methodology to current practice, we conducted a series of cross-sectional analyses using the baseline wave data. We quantified the statistical associations between religious service attendance and our focal prosocial outcomes. We included all regression covariates from the causal models (including sample weights) for each analysis, obviously omitting the outcome measured at baseline, i.e. the response variable.
+To clarify how our causal inferences compare with estimates from commonly used observational research methods, we quantified the statistical associations between religious service attendance and all prosocial outcomes using cross-sectional methods frequently employed in observational psychology. For each analysis, we included all regression covariates from the causal models, including sample weights, while omitting the baseline measurement of the outcome variable.
+
+**Cross-sectional volunteering result**: the change in expected hours of volunteer work for a one-unit increase in religious service attendance is `r b_church_on_hours_charity`. Multiplying this by 4.2 gives a monthly estimate of `r regression_regular_church_volunteer_minutes` minutes. This result is `r percent_greater_regression_volunteer` percent greater than the effect estimated from the 'regular vs. zero' causal contrast, revealing an *overstatement in the cross-sectional regression model*.
 
 
-**Cross-sectional volunteering result**: the change in expected hours of volunteer work for a one-unit increase in religious service attendance is `r b_church_on_hours_charity`. Multiplying this by 4.2 gives a monthly estimate of `r regression_regular_church_volunteer_minutes` minutes. This result is `r percent_greater_regression_volunteer` percent greater than the effect estimated from the 'regular vs. zero' causal contrast, indicating an *overstatement in the cross-sectional regression model*.
-
-
-**Cross-sectional charitable donations result**: The coefficient for religious service on annual charitable donations suggests a change in expected donation amount per unit increase in attendance is `r b_church_on_charity_donate`. When adjusted to a monthly rate by multiplying by 4.2, this value equals NZ Dollars `r regression_regular_church_charity`. It is `r percent_greater_regression_donate` percent greater than our causal contrast estimate, again indicating an overstatement in the cross-sectional regression model.
+**Cross-sectional charitable donations result**: The coefficient for religious service on annual charitable donations suggests a change in expected donation amount per unit increase in attendance is `r b_church_on_charity_donate`. When adjusted to a monthly rate by multiplying by 4.2, this value equals NZ Dollars `r regression_regular_church_charity`. It is `r percent_greater_regression_donate` percent greater than our causal contrast estimate, again revealing an overstatement in the cross-sectional regression model.
 
 
 For Studies 2 and 3, which focus on community help received, we adjusted our analysis for the non-collapsibility of odds ratios by assuming a Poisson distribution for the outcome variables, obtaining a rate ratio that approximates a risk ratio [@huitfeldt2019collapsibility; @vanderweele2020]:
 
 
-**Cross-sectional community assistance received result: Time**: the exponentiated change in expectation for a one-unit change in religious service attendance is `r b_church_on_community_time_binary_exp_true` approximate risk rate ratio. The monthly rate ratio derived by multiplying this coefficient by 4.2 is `r community_time_risk_ratio`. This estimate is `r percent_greater_rr_community_time` percent greater than the 'regular vs. zero' causal estimate, pointing to an overstatement in the cross-sectional regression model.
+**Cross-sectional community assistance received result: Time**: the exponentiated change in expectation for a one-unit change in religious service attendance is `r b_church_on_community_time_binary_exp_true` approximate risk rate ratio. The monthly rate ratio derived by multiplying this coefficient by 4.2 is `r community_time_risk_ratio`. This estimate is `r percent_greater_rr_community_time` percent greater than the 'regular vs. zero' causal estimate, revealing an overstatement in the cross-sectional regression model.
 
 
 **Cross-sectional community assistance received result: Money**: similarly, the exponentiated change for money received yields an approximate risk ratio of `r b_church_on_community_money_binary_exp_true`. The monthly risk ratio, after adjustment, is `r community_money_risk_ratio`. This rate ratio is `r percent_greater_rr_community_money` percent greater than the causal estimate, again revealing an overstatement in the cross-sectional regression model.
 
-
-*These findings underscore that the results of cross-sectional regressions, although suggestive, can considerably diverge from those obtained from the causal analysis of panel data.*
+These findings indicate that while cross-sectional regression results may be suggestive, they can differ substantially from those obtained through causal analysis of panel data.
 {{< pagebreak >}}
 
-
-### Economic Effect of Religious Service Attendance on Charitable Donations
-
-
+### Economic Effects of Religious Service Attendance on Charitable Donations
 
 
 ```{r}
@@ -1880,9 +1875,9 @@ Third, although the net cost to charity from a complete cessation of regular rel
 
 To provide context, we next consider these economic consequences against the New Zealand government’s annual budget in the year outcomes were measured (2021-2022) is *NZD `r nz_annual_budget`*. We observe:
 
- First, the expected gain from a nationwide adoption of regular religious service represents `r per_gain` percent of New Zealand's annual government budget 2021.
+First, the expected gain from a nationwide adoption of regular religious service represents `r per_gain` percent of New Zealand's annual government budget 2021.
  
- Second, we do not find a reliable one-year effect on charitable giving from the loss intervention.
+Second, we do not find a reliable one-year effect on charitable giving from the loss intervention.
 
 
 [^pop]: [National Population Estimates at 30 June 2021](https://www.stats.govt.nz/information-releases/national-population-estimates-at-30-june-2021)
@@ -1891,7 +1886,7 @@ To provide context, we next consider these economic consequences against the New
 
 Hence, by focusing on individual-level effects and aggregating these across the adult population, the scenario in which all New Zealand adults regularly attend religious services implies a substantial increase in society-wide charitable support one year after the intervention compared to the status quo. On the other hand, the scenario in which New Zealand experiences a complete cessation of religious service attendance, does not reliably distinguishable from the one year projection in the status quo condition. 
 
-However, it is important to emphasise that these population-wide estimates for aggregated one-year effects reflect short-term behavioural changes and do not address the broader, longer-term implications of gaining or losing religious institutions — an issue we revisit in the discussion.
+We emphasise that these population-wide estimates for aggregated one-year effects reflect short-term behavioural changes. They do not address the broader, long-term implications of gaining or losing religious institutions, a topic we revisit in the discussion.
 
 
 ## Discussion
@@ -1906,17 +1901,15 @@ An additional innovation was the use of novel measures of prosociality—help an
 
 Notably, our findings imply that traditional effect size measures, such as Cohen’s d or $R^2$, can misrepresent practical significance when not grounded in causal inference. Put bluntly, the concept of an “effect size” makes little sense for a statistical association, absent a consistently estimated causal effect. For example, although the standardised effect size between regular and no religious service attendance is modest (0.132 [0.102, 0.161]), this equates to an increase in annual charitable donations from NZD mean_donations_null to NZD mean_donations_gain per individual. This expected increase amounts to 4% of New Zealand’s 2021 government budget—a substantial real-world impact. This finding illustrates the limitations of relying on conventional statistical measures without considering valid causal estimates, particularly when informing policy. We recommend that researchers prioritise causal inference to evaluate and communicate practical effect sizes.
 
-An intriguing question remains: who benefits from this charity? Although our data indicate that religious individuals often receive help from their communities, it is unclear whether those providing the help are members of the same religious group. For example, religious service attendance might increase requests for assistance, which non-religious community members could then answer. Similarly, religious giving and volunteering might disproportionately benefit religious elites, potentially at the expense of broader public goods. Although these scenarios may seem extreme, our data do not exclude them, as our panel does not capture the network structure of charitable giving.
-
-However, we can gain insights into the role of religious charities by examining other data sources. In New Zealand, religious organisations operate as public charities, and their financial records are transparent. Public data show that religious institutions account for 40% of the charitable sector in New Zealand [@McLeod2020, p.17], with similar or even higher proportions observed in other countries [@brooks2004faith; @woodyard2014doing; @monsma2007religion]. Furthermore, evidence suggests that religious organisations are efficient charities with low administrative costs and high volunteer engagement [@khanna1995charity; @bekkers2011literature; @McLeod2020, p.26]. Of course, we cannot dismiss the possibility that, in some cases, religious leaders pocket a notable share of the benefits of religious giving. However, given that charities in New Zealand require open books, and given published institutional salaries, such instances are likely to be relatively rare, and of course secular charities are not immune to the same issue.
+An intriguing question remains: who benefits from this charity? Although our data indicate that religious individuals often receive help from their communities, it is unclear whether those providing the help are members of the same religious group. For example, religious service attendance might increase requests for assistance, which non-religious community members could then answer. Similarly, religious giving and volunteering might disproportionately benefit religious elites, potentially at the expense of broader public goods. Although these scenarios may seem extreme, our data do not exclude them, as our panel does not capture the network structure of charitable giving. However, we can gain insights into the role of religious charities by examining other data sources. In New Zealand, religious organisations operate as public charities, and their financial records are transparent. Public data show that religious institutions account for 40% of the charitable sector in New Zealand [@McLeod2020, p.17], with similar or even higher proportions observed in other countries [@brooks2004faith; @woodyard2014doing; @monsma2007religion]. Furthermore, evidence suggests that religious organisations are efficient charities with low administrative costs and high volunteer engagement [@khanna1995charity; @bekkers2011literature; @McLeod2020, p.26]. Of course, we cannot dismiss the possibility that, in some cases, religious leaders pocket a notable share of the benefits of religious giving. However, given that charities in New Zealand require open books, and given published institutional salaries, such instances are likely to be relatively rare, and of course secular charities are not immune to corruption.
 
 Despite the strengths of our study, several limitations persist. We should not confuse the precision of our causal workflow with the precision of the estimates we obtain. Direct and correlated measurement errors can skew findings by inflating or reducing actual effects [@vanderweele2012MEASUREMENT; @bulbulia2024wierd]. As noted by Bekkers and Wiepking [@bekkers2011accuracy], even uncorrelated errors can distort estimates of charitable giving, leading to downward biases in religious charity estimates. Although we used multiple measures and adjusted for baseline giving rates to reduce the impact of correlated errors, uncorrelated and systematic errors may still influence our results. With the potential for downward bias, our estimates may be conservatively biased, meaning we might underestimate the costs of religious decline. Since religious institutions comprise 40% of New Zealand’s charitable sector, a significant drop in religious attendance could threaten the viability of these charities.
 
 Simply put, our one-year estimates of charitable giving and volunteering trends may give a false sense of security, suggesting that a decline in religious attendance will not significantly affect philanthropic contributions. Conversely, a sharp rise in religious attendance could yield more significant benefits than our short-term forecasts suggest. Ultimately, our results indicate near-term effects on population behaviour, but they should not be viewed as causal predictions set in stone. Again, precise causal methods do not necessarily produce correspondingly precise causal answers. We do not claim to have a magical crystal ball. Here, we provide signals, not certainties.
 
-Finally, the generalisability of our findings beyond New Zealand remains to be investigated. Although our results apply to the New Zealand population, further research is needed to determine whether these findings hold in other cultural or national contexts. Initiatives such as the Global Flourish Study [@johnson2022global], and others, will eventually provide opportunities to apply causal methods across diverse cultures.
+The generalisability of our findings beyond New Zealand is yet to be explored, as are the causal effects of prolonged exposure to religious services over many years.  Although our results pertain to the New Zealand population, further research is needed to determine whether they hold in other cultural or national contexts. Initiatives such as the Global Flourish Study [@johnson2022global], and similar efforts will eventually provide opportunities to apply causal methods across diverse cultural settings.
 
-In conclusion, by integrating robust causal methods with longitudinal panel data, we provide clear quantitative evidence that religious service attendance causally affects prosocial behaviours. Beyond the significance of these findings, we hope this study encourages psychological scientists to adopt causal methods, which remain underutilised in the discipline. Most psychological questions are inherently causal. To understand the effects of interventions, something beyond the associational methods that dominate observational psychology is required [@bulbulia2024swigstime;@vanderweele2021can; @rohrer2022PATH].
+In conclusion, by integrating robust causal methods with longitudinal panel data, we provide clear quantitative evidence that religious service attendance has a causal effect on prosocial behaviours. Beyond the importance of these findings, we hope this study encourages psychological scientists to adopt causal methods, which remain underutilised within the discipline. Most psychological questions are inherently causal. To address causal questions, we need methods that improve upon the associational approaches that presently dominate observational psychology [@bulbulia2024swigstime;@vanderweele2021can; @rohrer2022PATH].
 
 Recent advances in computer science, epidemiology, and economics have developed conceptual and statistical tools that allow researchers to leverage observational time-series data to rigorously assess the effects of interventions [@hernan2024WHATIF]. These tools offer new opportunities to investigate how interventions shape human thought and behaviour, providing a clearer path for designing and evaluating policies that influence how we value one another.
 
